[gd_scene load_steps=3 format=3 uid="uid://6jgmguay1vx1"]

[ext_resource type="Script" path="res://top_down_velocity_ai.gd" id="1_v4us6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qxa0g"]
radius = 55.1453

[node name="TopDownVelocityAI" type="Node2D"]
script = ExtResource("1_v4us6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qxa0g")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
